# OS_labs

./: CMakeLists.txt  README.md
cp/: CMakeLists.txt  client.cpp  sea_battle.cpp  test.txt
cp/include/: client_utils.hpp  server_utils.hpp  shared_memory.hpp
cp/src/: client_utils.cpp  server_utils.cpp  shared_memory.cpp
lab1/: CMakeLists.txt  main.cpp
lab1/include/: parent.hpp  utils.hpp
lab1/src/: child.cpp  parent.cpp  utils.cpp
lab2/include/: bitonic-sort.hpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: utils.hpp
lab3/src/: child.cpp  parent.cpp  utils.cpp
lab4/: CMakeLists.txt  dinamic_main.cpp  dynamic_main.cpp  static_main.cpp
lab4/include/: realizations.hpp
lab4/src/: realization1.cpp  realization2.cpp
lab5-7/include/: socket.hpp  topology.hpp
lab5-7/src/: calculation_node.cpp  control_node.cpp  socket.cpp  topology.cpp
lab8/: strace.txt
reports/cp/: cp.tex
reports/lab1/: lab1.tex
reports/lab2/: lab2.tex
reports/lab3/: lab3.tex
reports/lab4/: lab4.tex
reports/lab5-7/: lab5-7.tex
reports/lab8/: lab8.tex
tests/: CMakeLists.txt  cp_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_dynamic_test.cpp  lab4_realiz1_test.cpp  lab4_realiz2_test.cpp  lab4_static_test.cpp
